@@ -30,6 +30,7 @@ SVN
 -bug: Script imposed memory limits cause issues with some scripts
 -bug: Turn off process leveling if there are not enough poller items to substantiate it
 -bug: Add device should allow no-snmp type devices
+-bug: Firefox Autocomplete causes issues with password validation
 -feature: Add logging to SQL Save error handling
 -feature: Add utility to convert database to InnoDB
 
